--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,7 @@
 
 body {
     background-color: black;
-
 }
-
 
 header {
     width: 100%;
@@ -28,7 +26,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    /* padding: 20px; */
+    padding: 20px;
 
     width: 100%;
     display: flex;
@@ -78,7 +76,7 @@ nav ul li a {
 
 .flechaInicio {
     position: absolute;
-    top: 85%;
+    top: 80%;
     left: 50%;
     width: 50px;
     transform: translate(-50%, 50%);
@@ -94,8 +92,8 @@ nav ul li a {
 
 .texto1 {
     position: absolute;
-    top: 500px;
-    left: 35%;
+    top: 400px;
+    left: 45%;
     transform: translate(-50%, 50%);
     font-size: 1.375rem;
     text-align: left;
@@ -106,8 +104,8 @@ nav ul li a {
     width: 100%;
     position: absolute;
     top: 400px;
-    left: 40%;
-    transform: translate(-45%, -65%);
+    left: 45%;
+    transform: translate(-40%, -60%);
     font-size: 1.25rem;
 }
 
@@ -115,30 +113,9 @@ section .imgTexto {
     width: 100%;
 }
 
-.texto1 {
-    position: absolute;
-    top: 500px;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    font-size: 1.375rem;
-    text-align: left;
-}
-
-.texto2 {
-    text-transform: uppercase;
-    width: 100%;
-    position: absolute;
-    top: 400px;
-    left: 40%;
-    transform: translate(-45%, -65%);
-    font-size: 1.25rem;
-
-}
-
 .logoTrailer {
     margin: 50px;
     width: 100%;
-
 }
 
 section .imgTexto {
@@ -153,10 +130,10 @@ section .imgTexto {
 
 .videoIzquierda{
     margin-right: 50%;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 .videoDerecha{
     margin-left: 50%;
-    padding-right: 20px;
+    padding-right: 10px;
 }
