--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -8,11 +8,10 @@
 
 body {
     background-color: black;
+    color: white;
 }
 
-header {
-    width: 100%;
-}
+
 
 .conteiner {
     position: relative;
@@ -20,7 +19,8 @@ header {
     height: 100vh;
 }
 
-.navBar {
+
+nav .navBar {
     position: absolute;
     top: 5%;
     left: 50%;
@@ -31,26 +31,8 @@ header {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-}
-
-nav ul {
-    align-items: center;
-}
-
-nav ul li {
-    list-style: none;
-    font-size: 20px;
-    /* margin: 10px; */
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: black;
-    font-family: "Oswald";
-    text-transform: uppercase;
-    letter-spacing: .1875rem;
 }
 
 .logo {
@@ -58,28 +40,51 @@ nav ul li a {
     margin-top: 30px;
 }
 
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 20px;
 
-.fondoInicio {
-    width: 100%;
-    height: 100vh;
 }
+
+nav ul li a {
+    font-size: 15px;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: .1875rem;
+    color: white;
+    font-family: "Oswald";
+    text-shadow: 5px 4px 5px black;
+}
+
 
 .textoInicio h1 {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 1.4375rem;
+    color: black;
 }
 
 .flechaInicio {
     position: absolute;
-    top: 80%;
+    top: 90%;
     left: 50%;
     width: 50px;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%, -50%);
+}
+
+.fondoInicio {
+    width: 100%;
+    height: 650px;
+    height: 100vh;
+}
+
+section .imgTexto {
+    width: 100%;
 }
 
 .contenedor {
@@ -92,9 +97,9 @@ nav ul li a {
 
 .texto1 {
     position: absolute;
-    top: 400px;
-    left: 45%;
-    transform: translate(-50%, 50%);
+    top: 500px;
+    left: 35%;
+    transform: translate(-50%, -50%);
     font-size: 1.375rem;
     text-align: left;
 }
@@ -104,36 +109,342 @@ nav ul li a {
     width: 100%;
     position: absolute;
     top: 400px;
-    left: 45%;
-    transform: translate(-40%, -60%);
+    left: 40%;
+    transform: translate(-45%, -65%);
     font-size: 1.25rem;
-}
-
-section .imgTexto {
-    width: 100%;
 }
 
 .logoTrailer {
     margin: 50px;
-    width: 100%;
+
 }
 
-section .imgTexto {
-    width: 100%;
-}
-
-.videos{
+.videos {
     width: 100%;
     text-align: center;
 }
 
-
-.videoIzquierda{
+.videoIzquierda {
     margin-right: 50%;
-    padding-left: 10px;
+    padding: 20px;
 }
 
-.videoDerecha{
+.videoDerecha {
     margin-left: 50%;
-    padding-right: 10px;
+    padding: 20px;
 }
+
+
+footer {
+    justify-content: space-between;
+    width: 100%;
+
+    text-align: center;
+    align-items: center;
+    background-color: rgb(44, 44, 44);
+}
+
+.titulo {
+    text-align: center;
+    margin-top: 10%;
+}
+
+.historia {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.textoHistoriaI {
+    float: left;
+    width: 50%;
+    text-align: center;
+    margin-top: 85px;
+    text-align: justify;
+    padding: 20px;
+    padding-left: 50px;
+    font-size: 25px;
+}
+
+.fotoHistoriaDerecha {
+    float: right;
+    width: 50%;
+    padding: 50px;
+}
+
+.textoHistoriaD {
+    float: right;
+    width: 50%;
+    text-align: center;
+    margin-top: 85px;
+    padding: 20px;
+    text-align: justify;
+    padding-right: 50px;
+    font-size: 25px;
+}
+
+.fotoHistoriaIzquierda {
+    float: left;
+    width: 50%;
+    padding: 50px;
+}
+
+/* personajes */
+
+.personajes {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    margin-top: 50px;
+}
+
+.Kratos {
+    width: 100%;
+}
+
+.textoPersonajesD {
+    float: right;
+    width: 50%;
+    text-align: center;
+    /* margin-top: 85px; */
+    padding: 100px;
+    text-align: justify;
+    padding-right: 50px;
+    font-size: 25px;
+
+}
+
+.fotoPersonajeI {
+    float: right;
+    width: 50%;
+    /* padding: 5px; */
+
+}
+
+.textoPersonajesI {
+    float: left;
+    width: 50%;
+    text-align: center;
+    margin-top: 85px;
+    padding: 50px;
+    text-align: justify;
+    padding-right: 50px;
+    font-size: 25px;
+
+}
+
+.fotoPersonajeD {
+    float: right;
+    width: 50%;
+    padding: 50px;
+}
+
+.videosCentrado {
+    width: 100%;
+    text-align: center;
+
+}
+
+.videosMomentos {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.video {
+
+    margin: 25px;
+}
+
+.titulo {
+    letter-spacing: 5px;
+    font-size: 25px;
+    text-transform: uppercase;
+}
+
+h1 {
+    margin-top: 100px;
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+}
+
+.fotoTrucos {
+    width: 47%;
+    float: right;
+    padding: 20px;
+}
+
+.titulosTrucos {
+    font-size: 22px;
+    letter-spacing: 4px;
+    margin-top: 34px;
+    padding: 15px;
+    text-align: left;
+
+
+}
+
+.consejos p {
+    font-size: 18px;
+    padding: 30px;
+    letter-spacing: 2px;
+    text-align: left;
+    width: 50%;
+    align-items: center;
+}
+
+.listaTrucos {
+    width: 50%;
+    text-align: left;
+    padding-left: 30px;
+}
+
+.consejos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.trucos {
+    width: 100%;
+    align-items: center;
+    text-align: center;
+}
+
+.division {
+    text-align: center;
+}
+
+.linea {
+    width: 50%;
+}
+
+
+
+/* tablet */
+
+@media (max-width: 768px) {
+
+    nav .navBar{
+        top: 7%;
+        left: 50%;
+        text-align: center;
+    }
+
+    .logo{
+        height: 60px;
+        margin-top: 25px;
+    }
+
+    .textoInicio h1{
+        font-size: 20px;
+        top: 35%;
+    }
+
+    .fondoInicio{
+        height: 100vh;
+    }
+
+    .texto1{
+        top: 300px;
+        font-size: 19px;
+        left: 40%;
+    }
+
+    .texto2{
+        top: 125px;
+        font-size: 18px;
+        width: 95%;
+        left: 45%;
+    }
+
+    .logoTrailer{
+        height: 8.125rem;
+        width: 100%;
+        text-align: center;
+    }
+
+    .videoIzquierda{
+        margin-top: 50px;
+        padding: 40px;
+        margin-right: 0px;
+        width: 500px;
+    }
+
+    .videoDerecha{
+        padding: 40px;
+        margin-left: 0px;
+        width: 500px;
+    }
+}
+
+@media (max-width:320px){
+    nav .navBar{
+        top: 7%;
+        left: 80%;
+
+ 
+        width: 100vh;
+    }
+
+    .logo{
+        height: 40px;
+        margin-top: 25px;
+    }
+
+    nav ul li a{
+        font-size: 14px;
+    }
+
+    nav ul{
+        align-items: center;
+    }
+
+
+    .personajes{
+        display: flex;
+        flex-direction: column;
+        width: 100vh;
+    }
+
+    .Kratos{
+        width: 100%;
+    }
+
+    .fotoPersonajeI{
+        float:none;
+        width: 100%;
+
+    }
+
+    .textoPersonajesD{
+        float: none;
+        width: 125%;
+        font-size: 20px;
+    }
+
+    .fotoPersonajeD{
+        float:none;
+        width: 100%;
+    }
+
+    .textoPersonajesI{
+        float: none;
+        width: 125%;
+        font-size: 20px;
+
+    }
+
+    footer{
+        width: 100vh;
+        align-items: center;
+        font-size: 16px;
+    }
+}
+
+
