--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
-body {
+.body {
     background-color: black;
     color: white;
-}
 
+}
 
 
 .conteiner {
@@ -20,24 +21,40 @@ body {
 }
 
 
-nav .navBar {
+nav .navbar {
     position: absolute;
     top: 5%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    padding: 20px;
+
 
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    background-color: transparent;
 }
 
-.logo {
-    height: 80px;
-    margin-top: 30px;
+
+.navbar-expand-lg .navbar-collapse{
+    justify-content: flex-end;
+    align-items: center;
+    color: black;
+
+}
+.container-fluid{
+    background-color: white;
+
+
+}
+
+.nav-link{
+    margin-top: 12px;
+}
+
+.navbar-brand img{
+    height: 50px;
+
 }
 
 nav ul li {
@@ -54,13 +71,13 @@ nav ul li a {
     letter-spacing: .1875rem;
     color: white;
     font-family: "Oswald";
-    text-shadow: 5px 4px 5px black;
+    /* text-shadow: 5px 4px 5px black; */
 }
 
 
 .textoInicio h1 {
     position: absolute;
-    top: 40%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-transform: uppercase;
@@ -97,10 +114,10 @@ section .imgTexto {
 
 .texto1 {
     position: absolute;
-    top: 500px;
-    left: 35%;
+    top: 400px;
+    left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 1.375rem;
+    font-size: 19px;
     text-align: left;
 }
 
@@ -108,15 +125,19 @@ section .imgTexto {
     text-transform: uppercase;
     width: 100%;
     position: absolute;
-    top: 400px;
-    left: 40%;
+    top: 200px;
+    left: 45%;
     transform: translate(-45%, -65%);
     font-size: 1.25rem;
 }
 
-.logoTrailer {
-    margin: 50px;
+.trailer{
+    background-color: black;
+}
 
+.logoTrailer {
+    margin: 50px 50px;
+    padding: 5px;
 }
 
 .videos {
@@ -142,6 +163,10 @@ footer {
     text-align: center;
     align-items: center;
     background-color: rgb(44, 44, 44);
+
+        color: white;
+
+
 }
 
 .titulo {
@@ -324,11 +349,14 @@ h1 {
     width: 50%;
 }
 
-
-
 /* tablet */
 
+
+
 @media (max-width: 768px) {
+
+
+
 
     nav .navBar{
         top: 7%;
@@ -343,7 +371,7 @@ h1 {
 
     .textoInicio h1{
         font-size: 20px;
-        top: 35%;
+        top: 60%;
     }
 
     .fondoInicio{
@@ -352,15 +380,16 @@ h1 {
 
     .texto1{
         top: 300px;
-        font-size: 19px;
+        font-size: 17px;
         left: 40%;
     }
 
     .texto2{
         top: 125px;
         font-size: 18px;
-        width: 95%;
+        width: 80%;
         left: 45%;
+        text-align: left;
     }
 
     .logoTrailer{
@@ -381,6 +410,10 @@ h1 {
         margin-left: 0px;
         width: 500px;
     }
+
+    .piePagina{
+        color: white;
+    }
 }
 
 @media (max-width:320px){
@@ -388,7 +421,6 @@ h1 {
         top: 7%;
         left: 80%;
 
- 
         width: 100vh;
     }
 
@@ -398,11 +430,25 @@ h1 {
     }
 
     nav ul li a{
-        font-size: 14px;
+        font-size: 4px;
     }
 
     nav ul{
         align-items: center;
+    }
+
+    .texto1{
+        top: 150px;
+        font-size: 4px;
+        left: 40%;
+    }
+
+    .texto2{
+        top: 100px;
+        font-size: 8px;
+        width: 80%;
+        left: 45%;
+        text-align: left;
     }
 
 
@@ -420,6 +466,12 @@ h1 {
         float:none;
         width: 100%;
 
+    }
+
+    .logoTrailer img{
+        height: 100px;
+        text-align: center;
+        margin-right: 50px;
     }
 
     .textoPersonajesD{
@@ -440,11 +492,28 @@ h1 {
 
     }
 
+    .videoIzquierda{
+        margin-top: 50px;
+        padding: 40px;
+        margin-right: 0px;
+        width: 300px;
+        height: 200px;
+    }
+
+    .videoDerecha{
+        padding: 40px;
+        margin-left: 0px;
+        width: 300px;
+        height: 200px;
+    }
+
     footer{
-        width: 100vh;
+        width: 100%;
         align-items: center;
         font-size: 16px;
     }
+    
 }
+
 
 
