--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,29 @@ header .navbar .container-fluid .nav-link {
   margin-top: 12px;
 }
 
+/* Estilo personalizado para la barra de scroll */
+::-webkit-scrollbar {
+  width: 12px;
+  /* Ancho de la barra de scroll */
+}
+
+/* Estilo para el thumb (barra deslizante) */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* Color de fondo del thumb */
+  border-radius: 6px;
+  /* Radio de borde del thumb */
+  border: 2px solid #555;
+  /* Borde del thumb */
+}
+
+/* Estilo para la pista (fondo del scrollbar) */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Color de fondo de la pista */
+}
+
 footer {
-  justify-content: space-between;
   width: 100%;
   text-align: center;
   align-items: center;
@@ -98,6 +119,8 @@ footer {
   left: 45%;
   transform: translate(-45%, -65%);
   font-size: 1.25rem;
+  color: black;
+  text-shadow: 0 0 30px white;
 }
 .contenedor .texto1 {
   position: absolute;
@@ -106,6 +129,8 @@ footer {
   transform: translate(-50%, -50%);
   font-size: 19px;
   text-align: left;
+  color: black;
+  text-shadow: 0 0 30px white;
 }
 
 .imgTexto {
@@ -113,28 +138,46 @@ footer {
 }
 
 .trailer {
-  padding: 30px;
   width: 100%;
   background-color: black;
 }
-.trailer .letras {
-  font-size: 25px;
-  letter-spacing: 2px;
+.trailer .trailerLogo {
+  width: 325px;
 }
-.trailer p:hover {
-  text-shadow: 0 0 30px #fff;
-  cursor: pointer;
-}
-.trailer .logoTrailer {
+.trailer .texto {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 50px;
+  font-size: 25px;
+}
+.trailer .texto-cambiante {
+  width: 100%;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.trailer .texto-hover {
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.trailer .texto-cambiante .texto-hover {
+  display: none;
+  color: white;
+  text-shadow: 0 0 30px white;
+}
+.trailer .texto-cambiante:hover .texto-original {
+  display: none;
+}
+.trailer .texto-cambiante:hover .texto-hover {
+  display: inline;
 }
 .trailer .videos {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 .trailer .videos .videoIzquierda {
   padding: 20px;
@@ -295,17 +338,17 @@ footer {
   padding: 30px;
   letter-spacing: 2px;
   text-align: left;
-  width: 50%;
+  width: 100%;
   align-items: center;
 }
 .consejos .listaTrucos {
-  width: 50%;
+  width: 100%;
   text-align: left;
   padding-left: 30px;
 }
 .consejos .fotoTrucos {
-  width: 47%;
-  float: right;
+  width: 100%;
+  justify-content: right;
   padding: 20px;
 }
 .consejos .division {
@@ -315,7 +358,29 @@ footer {
   width: 50%;
 }
 
+@media only screen and (max-width: 1440px) {
+  .textoInicio h1 {
+    font-size: 19px;
+  }
+  .contenedor .texto2 {
+    font-size: 18px;
+  }
+  .contenedor .texto1 {
+    font-size: 17px;
+  }
+  .trailer .texto {
+    font-size: 19px;
+  }
+  .videos .videoIzquierda,
+  .videoDerecha {
+    width: 395px;
+  }
+}
 @media only screen and (max-width: 768px) {
+  ul.barra-navegacion {
+    display: flex;
+    justify-content: space-between;
+  }
   nav .navBar {
     width: 100%;
     text-align: center;
@@ -325,8 +390,7 @@ footer {
     margin-top: 25px;
   }
   .fondoInicio {
-    width: 400px;
-    height: 800px;
+    width: 100%;
   }
   .inicioFondo h1 {
     align-items: center;
@@ -336,25 +400,58 @@ footer {
   }
   .contenedor .texto1 {
     top: 300px;
-    font-size: 13px;
-    left: 40%;
+    font-size: 12px;
+    text-align: center;
+    width: 90%;
   }
   .contenedor .texto2 {
-    font-size: 14px;
+    font-size: 12px;
   }
-  .trailer .logoTrailer img {
-    width: 21.875rem;
+  .trailer .logoTrailer {
+    width: 300px;
   }
-  .videoIzquierda {
-    margin-top: 50px;
-    padding: 40px;
-    margin-right: 0px;
-    width: 350px;
+  .texto-cambiante,
+  .texto-hover {
+    display: none;
   }
-  .videoDerecha {
-    padding: 40px;
-    margin-left: 0px;
-    width: 350px;
+  .videos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .videos .videoDerecha {
+    width: 500px;
+  }
+  .videos .videoIzquierda {
+    width: 500px;
+  }
+  .personajes {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .Kratos, .Atreus, .Freya, .Mimir {
+    width: 100%;
+    grid-column: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .personajes .textoPersonajesD {
+    width: 100%;
+    grid-column: none;
+    padding: 0;
+    margin: 0;
+  }
+  .personajes .textoPersonajesI {
+    width: 100%;
+    grid-column: none;
+    padding: 0;
+    margin: 0;
+  }
+  .personajes .fotoPersonajeD, .personajes .fotoPersonajeI {
+    width: 100%;
   }
   .piePagina {
     color: white;
@@ -368,6 +465,14 @@ footer {
   header nav div .container-fluid {
     width: 100%;
   }
+  .contenedor .texto1 {
+    top: 130px;
+    font-size: 12px;
+  }
+  .contenedor .texto2 {
+    top: 50px;
+    font-size: 12px;
+  }
   .personajes {
     display: flex;
     flex-direction: column;
@@ -376,6 +481,7 @@ footer {
     padding-right: 12px;
     margin: 0px;
     align-items: center;
+    margin-top: 23px;
   }
   .personajes .textoPersonajesD {
     width: 100%;
@@ -390,6 +496,9 @@ footer {
   .personajes .textoPersonajesI {
     width: 100%;
     font-size: 15px;
+  }
+  .fotoTrucos {
+    width: 100%;
   }
   .historia .textoHistoriaI {
     width: 100%;
@@ -424,13 +533,11 @@ footer {
     margin-right: 50px;
     padding: 0;
   }
-  .videoIzquierda {
-    margin: 0;
-    padding: 0;
+  .videos .videoDerecha {
+    width: 100%;
   }
-  .videoDerecha {
-    margin: 0;
-    padding: 0;
+  .videos .videoIzquierda {
+    width: 100%;
   }
   .videosMomentos {
     margin-top: 20px;
@@ -468,24 +575,24 @@ footer {
   nav ul {
     align-items: center;
   }
-  .texto1 {
+  .contenedor .texto1 {
     top: 150px;
-    font-size: 4px;
-    left: 40%;
+    font-size: 5 px;
+    text-align: center;
   }
-  .texto2 {
+  .contenedor .texto2 {
     top: 100px;
-    font-size: 8px;
+    font-size: 7px;
     width: 80%;
-    left: 45%;
-    text-align: left;
+    text-align: center;
   }
   .personajes {
     display: flex;
     flex-direction: column;
-    width: 100vh;
+    width: 100%;
   }
   .Kratos {
+    margin-top: 70px;
     width: 100%;
   }
   .fotoPersonajeI {
