--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -23,7 +23,7 @@ header {
         position: fixed;
         z-index: 100;
 
-        
+
         display: flex;
         flex-direction: row;
         background-color: transparent;
@@ -74,8 +74,39 @@ header {
 }
 
 
+
+
+
+
+//     EXTRA
+
+
+
+/* Estilo personalizado para la barra de scroll */
+::-webkit-scrollbar {
+    width: 12px;
+    /* Ancho de la barra de scroll */
+}
+
+/* Estilo para el thumb (barra deslizante) */
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    /* Color de fondo del thumb */
+    border-radius: 6px;
+    /* Radio de borde del thumb */
+    border: 2px solid #555;
+    /* Borde del thumb */
+}
+
+/* Estilo para la pista (fondo del scrollbar) */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    /* Color de fondo de la pista */
+}
+
+
+
 footer {
-    justify-content: space-between;
     width: 100%;
 
     text-align: center;
